; ModuleID = '/home/carl/AnghaBench/vlc/modules/audio_output/extr_vlcpulse.c_context_wait.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/audio_output/extr_vlcpulse.c_context_wait.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PA_CONTEXT_READY = common dso_local global i64 0, align 8
@PA_CONTEXT_FAILED = common dso_local global i64 0, align 8
@PA_CONTEXT_TERMINATED = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*)* @context_wait to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @context_wait(i32* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i64, align 8
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  br label %7

7:                                                ; preds = %21, %2
  %8 = load i32*, i32** %4, align 8
  %9 = call i64 @pa_context_get_state(i32* %8)
  store i64 %9, i64* %6, align 8
  %10 = load i64, i64* @PA_CONTEXT_READY, align 8
  %11 = icmp ne i64 %9, %10
  br i1 %11, label %12, label %24

12:                                               ; preds = %7
  %13 = load i64, i64* %6, align 8
  %14 = load i64, i64* @PA_CONTEXT_FAILED, align 8
  %15 = icmp eq i64 %13, %14
  br i1 %15, label %20, label %16

16:                                               ; preds = %12
  %17 = load i64, i64* %6, align 8
  %18 = load i64, i64* @PA_CONTEXT_TERMINATED, align 8
  %19 = icmp eq i64 %17, %18
  br i1 %19, label %20, label %21

20:                                               ; preds = %16, %12
  store i32 -1, i32* %3, align 4
  br label %25

21:                                               ; preds = %16
  %22 = load i32*, i32** %5, align 8
  %23 = call i32 @pa_threaded_mainloop_wait(i32* %22)
  br label %7

24:                                               ; preds = %7
  store i32 0, i32* %3, align 4
  br label %25

25:                                               ; preds = %24, %20
  %26 = load i32, i32* %3, align 4
  ret i32 %26
}

declare dso_local i64 @pa_context_get_state(i32*) #1

declare dso_local i32 @pa_threaded_mainloop_wait(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
